swagger authorize, fixed update delete create apis
