# docs/swagger.json
@@ -1,13 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample serice for managing clients",
+        "description": "This is a sample service for managing clients",
         "title": "Clients API",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {},
         "version": "1.0"
     },
-    "host": "192.168.31.74:8004",
+    "host": "localhost:8000/api/v1.0",
     "basePath": "/",
     "paths": {
         "/clients": {
@@ -22,7 +21,7 @@
                 "tags": [
                     "Clients"
                 ],
-                "summary": "Get  all clients",
+                "summary": "Get   all clients",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -36,6 +35,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new client with the input paylod",
                 "consumes": [
                     "application/json"
@@ -52,6 +56,7 @@
                         "description": "Create client",
                         "name": "newClient",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Client"
                         }
@@ -63,13 +68,25 @@
                         "schema": {
                             "$ref": "#/definitions/models.Client"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
                     }
                 }
             }
         },
         "/clients/{username}": {
             "get": {
-                "description": "get client by ID",
+                "description": "get client by username",
                 "tags": [
                     "Clients"
                 ],
@@ -77,9 +94,10 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Client ID",
-                        "name": "id",
-                        "in": "path"
+                        "description": "Client username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -104,7 +122,12 @@
                 }
             },
             "put": {
-                "description": "Update particular client by id",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update particular client by username",
                 "consumes": [
                     "application/json"
                 ],
@@ -117,9 +140,17 @@
                 "summary": "Update particular client",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Client username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Update Client",
                         "name": "updatedclient",
                         "in": "body",
+                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Client"
                         }
@@ -147,7 +178,12 @@
                 }
             },
             "delete": {
-                "description": "Delete particular client by id",
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete particular client by username",
                 "consumes": [
                     "application/json"
                 ],
@@ -160,12 +196,11 @@
                 "summary": "Delete particular client",
                 "parameters": [
                     {
-                        "description": "Delete Client",
-                        "name": "idToDelete",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/models.Client"
-                        }
+                        "type": "string",
+                        "description": "Client username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -223,6 +258,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
